fix: 행사 Redis 캐시 직렬화 오류 수정